syntax = "proto3";
package edu.cmu.cs.mse.apidesigna3.model.comment;

service CommentService {
  rpc CreateComment(CreateCommentRequest) returns (CreateCommentResponse);
  rpc VoteComment(VoteCommentRequest) returns (VoteCommentResponse);
  rpc GetMostUpvotedComments(GetMostUpvotedCommentsRequest) returns (GetMostUpvotedCommentsResponse);
  rpc ExpandCommentBranch(ExpandCommentBranchRequest) returns (ExpandCommentBranchResponse);
}

message GetMostUpvotedCommentsRequest {
  string post_id = 1;
  int32 num_comments = 2;
}

message GetMostUpvotedCommentsResponse {
  repeated CommentWithRepliesInfo top_comments_info = 1;
}

message ExpandCommentBranchRequest {
  string comment_id = 1;
  int32 num_top_comments = 2;
}

message ExpandCommentBranchResponse {
  Comment comment = 1;
  repeated RootLevelExpandedComments replies = 2;
}

message RootLevelExpandedComments {
  Comment comment = 1;
  repeated CommentWithRepliesInfo replies = 2;
}

message CommentWithRepliesInfo {
  Comment comment = 1;
  bool has_replies = 2;
}

message CreateCommentRequest {
  string text = 1;
  string author_id = 2;
  enum CommentState {
    NORMAL = 0;
    HIDDEN = 1;
  }
  CommentState state = 3;
  string parent_id = 4;
}

message VoteCommentRequest {
  string comment_id = 1;
  bool upvote = 2;
}

message CreateCommentResponse {
  Comment comment = 1;
  bool success = 2;
}

message VoteCommentResponse {
  Comment comment = 1;
  bool success = 2;
}

message Comment {
  string id = 1;
  string text = 2;
  string author_id = 3;
  int32 score = 4;
  enum CommentState {
    NORMAL = 0;
    HIDDEN = 1;
  }
  CommentState state = 5;
  int64 publication_date = 6;
  string parent_id = 7;
}
