syntax = "proto3";
package edu.cmu.cs.mse.apidesigna3.model.post;

service PostService {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {};
  rpc VotePost(VotePostRequest) returns (VotePostResponse) {};
  rpc GetPost(GetPostRequest) returns (GetPostResponse) {};
  //EXTRA CREDIT
  rpc MonitorUpdates(stream MonitorUpdatesRequest) returns (stream MonitorUpdatesResponse) {};
}

message CreatePostRequest {
  string title = 1;
  string text = 2;
  string author_id = 3;
  enum PostState {
    NORMAL = 0;
    LOCKED = 1;
    HIDDEN = 2;
  }
  PostState state = 4;
  string subreddit_name = 5;
  string content_url = 6;
}

message VotePostRequest {
  string post_id = 1;
  bool upvote = 2;
}

message GetPostRequest {
  string post_id = 1;
}

message CreatePostResponse {
  Post post = 1;
  bool success = 2;
}

message VotePostResponse {
  Post post = 1;
  bool success = 2;
}

message GetPostResponse {
  Post post = 1;
}

message Post {
  string id = 1;
  string title = 2;
  string text = 3;
  string author_id = 4;
  int32 score = 5;
  enum PostState {
    NORMAL = 0;
    LOCKED = 1;
    HIDDEN = 2;
  }
  PostState state = 6;
  int64 publication_date = 7;
  string subreddit_name = 8;
  string content_url = 9;
}
//EXTRA CREDIT
message MonitorUpdatesRequest {
  string post_id = 1;
  repeated string commentIds = 2;
}

message MonitorUpdatesResponse {
  oneof entity_id {
    string post_id = 1;
    string comment_id = 2;
  }  int32 score = 3;
}
